// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating domain entity has merge property across namespaces and entity is wrong should have one validation failure 1`] = `"Merge statement EntityNotValid.Property2 must be a valid path. No Property Property2 was found"`;

exports[`when validating domain entity has merge property across namespaces and entity is wrong should have one validation failure 2`] = `
Object {
  "column": 33,
  "line": 22,
  "tokenText": "EntityNotValid",
}
`;

exports[`when validating domain entity has merge property and entity is wrong should have one validation failure: when validating domain entity has merge property and entity is wrong -> message 1`] = `"Merge statement EntityNotValid.Property2 must be a valid path. No Property Property2 was found"`;

exports[`when validating domain entity has merge property and entity is wrong should have one validation failure: when validating domain entity has merge property and entity is wrong -> sourceMap 1`] = `
Object {
  "column": 33,
  "line": 20,
  "tokenText": "EntityNotValid",
}
`;

exports[`when validating domain entity has merge property and property is wrong should have one validation failure: when validating domain entity has merge property and property is wrong -> message 1`] = `"Merge statement GoodEntity2.NotThere must be a valid path. No Property NotThere was found"`;

exports[`when validating domain entity has merge property and property is wrong should have one validation failure: when validating domain entity has merge property and property is wrong -> sourceMap 1`] = `
Object {
  "column": 37,
  "line": 20,
  "tokenText": "GoodEntity2",
}
`;
